--- a/src/App.axaml
+++ b/src/App.axaml
@@ -6,5 +6,6 @@
         <FluentTheme Mode="Light" />
         <StyleInclude Source="avares://Avalonia.Controls.DataGrid/Themes/Default.xaml" />
         <StyleInclude Source="avares://Avalonia.Controls.DataGrid/Themes/Fluent.xaml" />
+		<!--<StyleInclude Source="avares://Aura.UI/AuraUI.xaml"/>-->
     </Application.Styles>
 </Application>
